<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    >

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center|center_horizontal"
        android:layout_marginBottom="10dp"
        android:src="@drawable/logo" />

    <ImageView
        android:layout_width="148dp"
        android:layout_height="24dp"
        android:layout_gravity="center|center_horizontal"
        android:layout_marginBottom="20dp"
        android:src="@drawable/nama_logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:text="Login"
            android:textColor="#000000"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"
            android:hint="@string/notlp"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#000000"
            android:hint="@string/pw"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/baground_rounded"
            android:text="@string/login"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</LinearLayout>